env changes with the description foe using fields

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-APPNAME = 'To-Do-List-Application'
-APPVERSION = 'v1.0'
-APP_PORT = 4004
+APPNAME = 'Nest-Ecommerce-Application'
+APPVERSION = 'v0.1'
+APP_PORT = 9888 #add ur application available port
 
-DB_HOST = localhost
-DB_PORT = 3306
-DB_USERNAME = tele
-DB_PASSWORD = tele123$
-DATABASE = ecommerce
-MYSQL_SYNC = false
+DB_HOST = localhost #add ur databse host from localhost or from the online database host 
+DB_PORT = 3306 #add ur databse port from localhost or from the online database port 
+DB_USERNAME = tele #add ur db username
+DB_PASSWORD = tele123$ #add ur db password
+DATABASE = ecommerce #add ur db database
+MYSQL_SYNC = false #mysql sync 
 
 
-JWT_SECRET=jwt-secret-key-testing
+JWT_SECRET=jwt-secret-key-testing  #jwt secret key for access token
