--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+ormlogs.log
 
 # OS
 .DS_Store
@@ -33,3 +34,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+#env
+*.env
+yarn.lock
+package-lock.json
